// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipient should render 1`] = `
<div>
  <div
    class="sc-fzqNJr bVIZOB"
  >
    <div
      class="flex items-stretch select-buttons"
    >
      <button
        class="sc-AxjAm ddQVWI flex-1"
        color="primary"
        data-testid="add-recipient-is-single-toggle"
        type="button"
      >
        Single
      </button>
      <button
        class="sc-AxjAm ddJBbC flex-1 border-l-0"
        color="primary"
        data-testid="add-recipient-is-multiple-toggle"
        type="button"
      >
        Multiple
      </button>
    </div>
    <div
      class="space-y-8 mt-12 rounded-sm "
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient"
          >
            Recipient
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-Axmtr hdGCex"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="pl-6 pr-3 mr-1 bg-white text-theme-primary bg-theme-background focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with multiple recipients tab 1`] = `
<div>
  <div
    class="sc-fzqNJr bVIZOB"
  >
    <div
      class="flex items-stretch select-buttons"
    >
      <button
        class="sc-AxjAm ddJBbC flex-1"
        color="primary"
        data-testid="add-recipient-is-single-toggle"
        type="button"
      >
        Single
      </button>
      <button
        class="sc-AxjAm ddQVWI flex-1 border-l-0"
        color="primary"
        data-testid="add-recipient-is-multiple-toggle"
        type="button"
      >
        Multiple
      </button>
    </div>
    <div
      class="space-y-8 mt-12 rounded-sm MultiRecipientWrapper"
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient"
          >
            Recipient
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-Axmtr hdGCex"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="pl-6 pr-3 mr-1 bg-white text-theme-primary bg-theme-background focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without recipients 1`] = `
<div>
  <div
    class="sc-fzqNJr bVIZOB"
  >
    <div
      class="flex items-stretch select-buttons"
    >
      <button
        class="sc-AxjAm ddQVWI flex-1"
        color="primary"
        data-testid="add-recipient-is-single-toggle"
        type="button"
      >
        Single
      </button>
      <button
        class="sc-AxjAm ddJBbC flex-1 border-l-0"
        color="primary"
        data-testid="add-recipient-is-multiple-toggle"
        type="button"
      >
        Multiple
      </button>
    </div>
    <div
      class="space-y-8 mt-12 rounded-sm "
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient"
          >
            Recipient
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-Axmtr hdGCex"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="pl-6 pr-3 mr-1 bg-white text-theme-primary bg-theme-background focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should set available amount 1`] = `
<div>
  <div
    class="sc-fzqNJr bVIZOB"
  >
    <div
      class="flex items-stretch select-buttons"
    >
      <button
        class="sc-AxjAm ddQVWI flex-1"
        color="primary"
        data-testid="add-recipient-is-single-toggle"
        type="button"
      >
        Single
      </button>
      <button
        class="sc-AxjAm ddJBbC flex-1 border-l-0"
        color="primary"
        data-testid="add-recipient-is-multiple-toggle"
        type="button"
      >
        Multiple
      </button>
    </div>
    <div
      class="space-y-8 mt-12 rounded-sm "
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient"
          >
            Recipient
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-Axmtr hdGCex"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw dRuQsB overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="pl-6 pr-3 mr-1 bg-white text-theme-primary bg-theme-background focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;
